[gd_scene load_steps=114 format=2]

[ext_resource path="res://skripts/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_000_ergebnis.png" type="Texture" id=2]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_001_ergebnis.png" type="Texture" id=3]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_002_ergebnis.png" type="Texture" id=4]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_003_ergebnis.png" type="Texture" id=5]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_004_ergebnis.png" type="Texture" id=6]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_005_ergebnis.png" type="Texture" id=7]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_006_ergebnis.png" type="Texture" id=8]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_007_ergebnis.png" type="Texture" id=9]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_008_ergebnis.png" type="Texture" id=10]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_009_ergebnis.png" type="Texture" id=11]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_010_ergebnis.png" type="Texture" id=12]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_011_ergebnis.png" type="Texture" id=13]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_012_ergebnis.png" type="Texture" id=14]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_013_ergebnis.png" type="Texture" id=15]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_014_ergebnis.png" type="Texture" id=16]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_015_ergebnis.png" type="Texture" id=17]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_016_ergebnis.png" type="Texture" id=18]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_017_ergebnis.png" type="Texture" id=19]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_018_ergebnis.png" type="Texture" id=20]
[ext_resource path="res://graphics/player/Orc7/__orc_7_idle_019_ergebnis.png" type="Texture" id=21]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_000_ergebnis.png" type="Texture" id=22]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_001_ergebnis.png" type="Texture" id=23]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_002_ergebnis.png" type="Texture" id=24]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_003_ergebnis.png" type="Texture" id=25]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_004_ergebnis.png" type="Texture" id=26]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_005_ergebnis.png" type="Texture" id=27]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_006_ergebnis.png" type="Texture" id=28]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_007_ergebnis.png" type="Texture" id=29]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_008_ergebnis.png" type="Texture" id=30]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_009_ergebnis.png" type="Texture" id=31]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_010_ergebnis.png" type="Texture" id=32]
[ext_resource path="res://graphics/player/Orc7/__orc_7_run_011_ergebnis.png" type="Texture" id=33]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_000_ergebnis.png" type="Texture" id=34]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_001_ergebnis.png" type="Texture" id=35]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_002_ergebnis.png" type="Texture" id=36]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_003_ergebnis.png" type="Texture" id=37]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_004_ergebnis.png" type="Texture" id=38]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_005_ergebnis.png" type="Texture" id=39]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_006_ergebnis.png" type="Texture" id=40]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_007_ergebnis.png" type="Texture" id=41]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_008_ergebnis.png" type="Texture" id=42]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_upper_cut_009_ergebnis.png" type="Texture" id=43]
[ext_resource path="res://graphics/player/Orc7/__orc_7_die_000_ergebnis.png" type="Texture" id=44]
[ext_resource path="res://graphics/player/Orc7/__orc_7_die_001_ergebnis.png" type="Texture" id=45]
[ext_resource path="res://graphics/player/Orc7/__orc_7_die_002_ergebnis.png" type="Texture" id=46]
[ext_resource path="res://graphics/player/Orc7/__orc_7_die_003_ergebnis.png" type="Texture" id=47]
[ext_resource path="res://graphics/player/Orc7/__orc_7_die_004_ergebnis.png" type="Texture" id=48]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_000_ergebnis.png" type="Texture" id=49]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_001_ergebnis.png" type="Texture" id=50]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_002_ergebnis.png" type="Texture" id=51]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_003_ergebnis.png" type="Texture" id=52]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_004_ergebnis.png" type="Texture" id=53]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_005_ergebnis.png" type="Texture" id=54]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_006_ergebnis.png" type="Texture" id=55]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_007_ergebnis.png" type="Texture" id=56]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_008_ergebnis.png" type="Texture" id=57]
[ext_resource path="res://graphics/player/Orc7/__orc_7_jump_009_ergebnis.png" type="Texture" id=58]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_000_ergebnis.png" type="Texture" id=59]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_001_ergebnis.png" type="Texture" id=60]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_002_ergebnis.png" type="Texture" id=61]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_003_ergebnis.png" type="Texture" id=62]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_004_ergebnis.png" type="Texture" id=63]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_005_ergebnis.png" type="Texture" id=64]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_006_ergebnis.png" type="Texture" id=65]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_007_ergebnis.png" type="Texture" id=66]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_008_ergebnis.png" type="Texture" id=67]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_009_ergebnis.png" type="Texture" id=68]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_010_ergebnis.png" type="Texture" id=69]
[ext_resource path="res://graphics/player/Orc7/__orc_7_walk_011_ergebnis.png" type="Texture" id=70]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_000_ergebnis.png" type="Texture" id=71]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_001_ergebnis.png" type="Texture" id=72]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_002_ergebnis.png" type="Texture" id=73]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_003_ergebnis.png" type="Texture" id=74]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_004_ergebnis.png" type="Texture" id=75]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_005_ergebnis.png" type="Texture" id=76]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_006_ergebnis.png" type="Texture" id=77]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_007_ergebnis.png" type="Texture" id=78]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_008_ergebnis.png" type="Texture" id=79]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_slash_009_ergebnis.png" type="Texture" id=80]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_000_ergebnis.png" type="Texture" id=81]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_001_ergebnis.png" type="Texture" id=82]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_002_ergebnis.png" type="Texture" id=83]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_003_ergebnis.png" type="Texture" id=84]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_004_ergebnis.png" type="Texture" id=85]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_005_ergebnis.png" type="Texture" id=86]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_006_ergebnis.png" type="Texture" id=87]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_007_ergebnis.png" type="Texture" id=88]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_008_ergebnis.png" type="Texture" id=89]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_two_hand_slash_009_ergebnis.png" type="Texture" id=90]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_000_ergebnis.png" type="Texture" id=91]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_001_ergebnis.png" type="Texture" id=92]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_002_ergebnis.png" type="Texture" id=93]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_003_ergebnis.png" type="Texture" id=94]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_004_ergebnis.png" type="Texture" id=95]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_005_ergebnis.png" type="Texture" id=96]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_006_ergebnis.png" type="Texture" id=97]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_007_ergebnis.png" type="Texture" id=98]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_008_ergebnis.png" type="Texture" id=99]
[ext_resource path="res://graphics/player/Orc7/__orc_7_attack_stab_009_ergebnis.png" type="Texture" id=100]
[ext_resource path="res://graphics/player/Orc7/__orc_7_hurt_000_ergebnis.png" type="Texture" id=101]
[ext_resource path="res://graphics/player/Orc7/__orc_7_hurt_001_ergebnis.png" type="Texture" id=102]
[ext_resource path="res://graphics/player/Orc7/__orc_7_hurt_002_ergebnis.png" type="Texture" id=103]
[ext_resource path="res://graphics/player/Orc7/__orc_7_hurt_003_ergebnis.png" type="Texture" id=104]
[ext_resource path="res://graphics/player/Orc7/__orc_7_hurt_004_ergebnis.png" type="Texture" id=105]
[ext_resource path="res://graphics/player/Orc7/__orc_7_defend_000_ergebnis.png" type="Texture" id=106]
[ext_resource path="res://graphics/player/Orc7/__orc_7_defend_001_ergebnis.png" type="Texture" id=107]
[ext_resource path="res://graphics/player/Orc7/__orc_7_defend_002_ergebnis.png" type="Texture" id=108]
[ext_resource path="res://graphics/player/Orc7/__orc_7_defend_003_ergebnis.png" type="Texture" id=109]
[ext_resource path="res://graphics/player/Orc7/__orc_7_defend_004_ergebnis.png" type="Texture" id=110]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "attackup",
"speed": 15.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "jump",
"speed": 9.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ) ],
"loop": true,
"name": "walk",
"speed": 13.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ) ],
"loop": true,
"name": "hit",
"speed": 20.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ) ],
"loop": false,
"name": "stab",
"speed": 20.0
}, {
"frames": [ ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ) ],
"loop": true,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ) ],
"loop": true,
"name": "defend",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 30.0921 )

[sub_resource type="CircleShape2D" id=3]

[node name="Player" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -0.166084, -0.166082 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "jump"
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 13.1171, 22.9505 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 12.2943, 52.8653 )
enabled = true
cast_to = Vector2( 0, 5 )
collide_with_areas = true

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 9.94115, 17.8489 )
scale = Vector2( 7, 7 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="KinematicBody2D/AnimatedSprite" to="KinematicBody2D" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
